# src/app.ts
@@ -6,6 +6,7 @@ import authRoutes from './routes/auth.routes';
 import activoRoutes from './routes/activo.routes';
 import asignacionRoutes from './routes/asignacion.routes';
 import incidenciaRoutes from './routes/incidencia.routes';
+import usuarioRoutes from './routes/usuario.routes';
 import docsRoutes from './docs/docs.routes';
 
 const app: Application = express();
@@ -26,6 +27,7 @@ app.use('/api/auth', authRoutes);
 app.use('/api/activos', activoRoutes);
 app.use('/api/asignaciones', asignacionRoutes);
 app.use('/api/incidencias', incidenciaRoutes);
+app.use('/api/usuarios', usuarioRoutes);
 app.use('/api/docs', docsRoutes);
 
 app.use(notFoundHandler);
